--- a/AvaloniaTodoApp/Views/TodoTaskView.axaml
+++ b/AvaloniaTodoApp/Views/TodoTaskView.axaml
@@ -2,9 +2,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:vm="using:AvaloniaTodoAPp.ViewModels"
+             xmlns:vm="clr-namespace:AvaloniaTodoApp.ViewModels"
              mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="450"
-             x:Class="AvaloniaTodoAPp.Views.TodoTaskView"
+             x:Class="AvaloniaTodoApp.Views.TodoTaskView"
              x:DataType="vm:TodoTaskViewModel">
     <UserControl.Styles>
         <Style Selector="TextBlock.completed">
