--- a/AvaloniaTodoApp/App.axaml
+++ b/AvaloniaTodoApp/App.axaml
@@ -1,10 +1,10 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="AvaloniaTodoAPp.App"
-             xmlns:local="using:AvaloniaTodoAPp"
+             x:Class="AvaloniaTodoApp.App"
+             xmlns:local="using:AvaloniaTodoApp"
              xmlns:dialogHostAvalonia="clr-namespace:DialogHostAvalonia;assembly=DialogHost.Avalonia"
-             xmlns:dialogs="clr-namespace:AvaloniaTodoAPp.Dialogs"
              xmlns:converters="clr-namespace:AvaloniaTodoApp.Converters"
+             xmlns:dialogs="clr-namespace:AvaloniaTodoApp.Dialogs"
              RequestedThemeVariant="Default">
     <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
