--- a/AvaloniaTodoApp/Views/SplashWindow.axaml
+++ b/AvaloniaTodoApp/Views/SplashWindow.axaml
@@ -3,13 +3,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="400"
+        x:Class="AvaloniaTodoApp.Views.SplashWindow"
         Width="500" Height="400"
-        x:Class="AvaloniaTodoAPp.Views.SplashWindow"
         Icon="/Assets/avalonia-logo.ico"
         Title="AvaloniaTodoApp">
-        
-        <Panel>
-                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center">Loading...</TextBlock>
-        </Panel>
+
+    <Panel>
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center">Loading...</TextBlock>
+    </Panel>
 
 </Window>
