--- a/AvaloniaTodoApp/Views/TestWindow.axaml
+++ b/AvaloniaTodoApp/Views/TestWindow.axaml
@@ -2,9 +2,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:vm="using:AvaloniaTodoAPp.ViewModels"
-        xmlns:controls="clr-namespace:AvaloniaTodoAPp.Controls"
         xmlns:dialogHostAvalonia="clr-namespace:DialogHostAvalonia;assembly=DialogHost.Avalonia"
+        xmlns:vm="clr-namespace:AvaloniaTodoApp.ViewModels"
+        xmlns:controls="clr-namespace:AvaloniaTodoApp.Controls"
         mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="450"
         x:Class="AvaloniaTodoApp.Views.TestWindow"
         x:DataType="vm:TestWindowViewModel"
